# SMKBO

./: README.md  pyproject.toml  test.py
SMKBO/: bo.py
SMKBO/cas/: kernels.py  localbo_cat.py  localbo_mixed.py  localbo_utils.py  optimizer.py  optimizer_cont.py  optimizer_mixed.py
SMKBO/spectral/: gp_regression.py  sinc_kernel.py
SMKBO/test_func/: __init__.py  continuous.py  mixed.py
src/SMKBO/: bo.py
src/SMKBO/cas/: localbo_cat.py  localbo_mixed.py  localbo_utils.py  optimizer.py  optimizer_cont.py  optimizer_mixed.py
src/SMKBO/spectral/: adaptive_kernel.py  cauchy_spectral_mixture.py
src/SMKBO/test_func/: categorical.py  continuous.py  mixed.py
tests/: test.py
